<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.solenopsis</groupId>
    <artifactId>soap</artifactId>
    <version>1.22</version>

    <name>Solenopsis:  Salesforce SOAP Library</name>
    <description>This project is a Java SOAP library for SFDC.</description>

    <url>https://github.com/solenopsis/soap</url>

    <licenses>
        <license>
            <name>GNU General Public License, Version 3</name>
            <url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <packaging>jar</packaging>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <org.apache.maven.plugins_maven-scm-plugin>2.0.1</org.apache.maven.plugins_maven-scm-plugin>

        <org.apache.commons_commons-lang3>3.20.0</org.apache.commons_commons-lang3>

        <org.flossware_jcommons>1.21</org.flossware_jcommons>

        <cxf.version>4.0.9</cxf.version>

        <org.junit.jupiter_junit-jupiter-api>5.11.4</org.junit.jupiter_junit-jupiter-api>
        <org.mockito_mockito-core>5.14.2</org.mockito_mockito-core>
        <slf4j.version>2.0.16</slf4j.version>
        <logback.version>1.5.12</logback.version>

        <message>Automated Version Bump ${project.version} [ci skip]</message>
    </properties>

    <scm>
        <connection>scm:git:https://github.com/solenopsis/soap.git</connection>
        <developerConnection>scm:git:https://github.com/solenopsis/soap.git</developerConnection>
        <url>https://github.com/solenopsis/soap</url>
    </scm>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <version>3.3.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.11.0</version>
                </plugin>

                <plugin>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.1.2</version>
                </plugin>

                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.3.0</version>
                </plugin>

                <plugin>
                    <artifactId>maven-install-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-site-plugin</artifactId>
                    <version>3.12.1</version>
                </plugin>

                <plugin>
                    <artifactId>maven-project-info-reports-plugin</artifactId>
                    <version>3.4.5</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-codegen-plugin</artifactId>
                <version>${cxf.version}</version>

                <executions>
                    <execution>
                        <id>generate-apex</id>
                        <phase>generate-sources</phase>

                        <configuration>
                            <defaultOptions>
                                <bindingFiles>
                                    <bindingFile>${basedir}/src/main/resources/jaxb/global-binding.xml</bindingFile>
                                </bindingFiles>

                                <noAddressBinding>true</noAddressBinding>
                                <autoNameResolution>true</autoNameResolution>
                            </defaultOptions>

                            <wsdlOptions>
                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/soap-apex.wsdl</wsdl>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>org.solenopsis.soap.apex</extraarg>
                                    </extraargs>
                                </wsdlOption>

                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/soap-enterprise.wsdl</wsdl>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>org.solenopsis.soap.enterprise</extraarg>
                                    </extraargs>
                                </wsdlOption>

                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/soap-metadata.wsdl</wsdl>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>org.solenopsis.soap.metadata</extraarg>
                                    </extraargs>
                                </wsdlOption>

                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/soap-partner.wsdl</wsdl>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>org.solenopsis.soap.partner</extraarg>
                                    </extraargs>
                                </wsdlOption>

                                <wsdlOption>
                                    <wsdl>${basedir}/src/main/resources/wsdl/soap-tooling.wsdl</wsdl>
                                    <extraargs>
                                        <extraarg>-p</extraarg>
                                        <extraarg>org.solenopsis.soap.tooling</extraarg>
                                    </extraargs>
                                </wsdlOption>
                            </wsdlOptions>
                        </configuration>

                        <goals>
                            <goal>wsdl2java</goal>
                        </goals>
                    </execution>
                </executions>

                <!-- Add SLF4J to eliminate "No SLF4J providers found" warning during code generation -->
                <dependencies>
                    <dependency>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-api</artifactId>
                        <version>${slf4j.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>ch.qos.logback</groupId>
                        <artifactId>logback-classic</artifactId>
                        <version>${logback.version}</version>
                    </dependency>
                </dependencies>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <excludes>
                        <exclude>**/*IT.java</exclude>
                    </excludes>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.12</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-scm-plugin</artifactId>
                <version>${org.apache.maven.plugins_maven-scm-plugin}</version>

                <configuration>
                    <providerImplementations>
                        <git>git</git>
                    </providerImplementations>

                    <tag>${project.version}</tag>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>${org.apache.commons_commons-lang3}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-frontend-jaxws</artifactId>
            <version>${cxf.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http</artifactId>
            <version>${cxf.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.cxf</groupId>
            <artifactId>cxf-rt-transports-http-jetty</artifactId>
            <version>${cxf.version}</version>
        </dependency>

        <dependency>
            <groupId>org.flossware</groupId>
            <artifactId>jcommons</artifactId>
            <version>${org.flossware_jcommons}</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${org.junit.jupiter_junit-jupiter-api}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${org.junit.jupiter_junit-jupiter-api}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${org.mockito_mockito-core}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${org.mockito_mockito-core}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>flossware-packagecloud</id>
            <url>https://packagecloud.io/flossware/java/maven2</url>
        </repository>
    </repositories>
        
    <distributionManagement>
        <!--
        <repository>
            <id>packagecloud-solenopsis</id>
            <name>packagecloud-solenopsis</name>
            <url>https://packagecloud.io/solenopsis/soap/maven2/</url>
        </repository>
        -->
        <repository>
            <id>packagecloud-flossware</id>
            <name>packagecloud-flossware</name>
            <url>https://packagecloud.io/flossware/java/maven2/</url>
        </repository>
    </distributionManagement>
</project>